--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tailwindcss/cli": "^4.1.10",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
